# Multi-Provider-AI-Hub

./: .env.example  .gitignore  README.md  README_EN.md  README_ID.md  how_to_run.md  pyproject.toml  requirements.txt
.agents/rules/: my-style.md
.agents/workflows/: planning.md
app/: config.py  main.py
app/api/: dependencies.py  router.py
app/core/: auth.py  exceptions.py  logging.py  middleware.py
app/providers/: __init__.py  base.py  gemini.py  nvidia.py  ollama.py
app/schemas/: common.py  requests.py  responses.py
app/services/: batch_service.py  cache_service.py  generator.py  health_checker.py  key_manager.py  model_registry.py  rate_limiter.py  reasoning_capability.py  session_manager.py
app/utils/: __init__.py  image.py
docs/: API_DOCUMENTATION_version_beta0.2.5.md  API_DOCUMENTATION_version_beta0.2.8.md
plan/: ROADMAP.md
plan/beta0.1.1-foundation-core/: plan-design-foundation-core-beta0.1.1.md  task1-project-scaffolding.md  task2-configuration-system.md  task3-exception-hierarchy.md  task4-logging-system.md  task5-request-logging-middleware.md  task6-fastapi-entry-point.md
plan/beta0.1.2-schema-model-registry/: plan-design-schema-model-registry-beta0.1.2.md  task1-common-types.md  task2-request-schemas.md  task3-response-schemas.md  task4-model-registry.md  task5-dependency-injection.md  task6-models-endpoint-router.md  task7-integrate-main.md
plan/beta0.1.3-provider-ollama/: plan-design-provider-ollama-beta0.1.3.md  task1-base-provider.md  task2-ollama-provider.md  (+4 more)
scripts/: explore_nvidia_api.py
tests/: __init__.py  conftest.py
(+114 files in other folders)
